--- a/src/SettingAiForm.ui
+++ b/src/SettingAiForm.ui
@@ -23,7 +23,7 @@
       <bool>true</bool>
      </property>
      <property name="checked">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
@@ -41,40 +41,132 @@
        </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="checkBox_use_OPENAI_API_KEY_env_value">
-        <property name="text">
-         <string>Use OPENAI_API_KEY environment value</string>
+       <widget class="QStackedWidget" name="stackedWidget">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEdit_openai_api_key"/>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox_use_ANTHROPIC_API_KEY_env_value">
-        <property name="text">
-         <string>Use ANTHROPIC_API_KEY environment value</string>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>100</height>
+         </size>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEdit_anthropic_api_key"/>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox_use_GOOGLE_API_KEY_env_value">
-        <property name="text">
-         <string>Use GOOGLE_API_KEY environment value</string>
+        <property name="currentIndex">
+         <number>2</number>
         </property>
+        <widget class="QWidget" name="page_openai">
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QRadioButton" name="radioButton_use_OPENAI_API_KEY_env_value">
+            <property name="text">
+             <string>Use OPENAI_API_KEY environment value</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButton_use_custom_openai_api_key">
+            <property name="text">
+             <string>Custom API key</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="lineEdit_openai_api_key"/>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="page_anthropic">
+         <layout class="QVBoxLayout" name="verticalLayout_4">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QRadioButton" name="radioButton_use_ANTHROPIC_API_KEY_env_value">
+            <property name="text">
+             <string>Use ANTHROPIC_API_KEY environment value</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButton_use_custom_anthropic_api_key">
+            <property name="text">
+             <string>Custom API key</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="lineEdit_anthropic_api_key"/>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="page_google">
+         <layout class="QVBoxLayout" name="verticalLayout_5">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QRadioButton" name="radioButton_use_GOOGLE_API_KEY_env_value">
+            <property name="text">
+             <string>Use GOOGLE_API_KEY environment value</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButton_use_custom_google_api_key">
+            <property name="text">
+             <string>Custom API key</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="lineEdit_google_api_key"/>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="page_unknown"/>
        </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEdit_google_api_key"/>
       </item>
      </layout>
     </widget>
    </item>
    <item>
     <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Orientation::Vertical</enum>
+     </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
@@ -88,12 +180,6 @@
  <tabstops>
   <tabstop>groupBox_generate_commit_message_by_ai</tabstop>
   <tabstop>comboBox_ai_model</tabstop>
-  <tabstop>checkBox_use_OPENAI_API_KEY_env_value</tabstop>
-  <tabstop>lineEdit_openai_api_key</tabstop>
-  <tabstop>checkBox_use_ANTHROPIC_API_KEY_env_value</tabstop>
-  <tabstop>lineEdit_anthropic_api_key</tabstop>
-  <tabstop>checkBox_use_GOOGLE_API_KEY_env_value</tabstop>
-  <tabstop>lineEdit_google_api_key</tabstop>
  </tabstops>
  <resources/>
  <connections/>
