--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -53,5 +53,6 @@
         <file>filemagic/magic.mgc</file>
         <file>Guitar.ico</file>
         <file>image/clear.svg</file>
+        <file>misc/migemo.zip</file>
     </qresource>
 </RCC>
